# aioption

./: .env.example  .gitignore  MIGRATION.md  README.md  deploy-phala.sh  e2e_test.py  scripts.sh
contracts/: foundry.toml
contracts/script/: DeployAgentBet.sol  DeployOB.sol  DeployOB2.sol  DeployOB3.sol  DeployOF.sol  DeployOption.sol  DeployOrderBook.sol
contracts/src/: BetContract.sol  BetFactory.sol  ITEEVerifier.sol  MasterFactory.sol  Option.sol  OptionFactory.sol  OrderBook.sol  PrefixRegistry.sol  ProviderRegistry.sol
contracts/test/: AgentBet.t.sol  MinimalTest.sol  OptionTest.t.sol
docker-judge/: Dockerfile  app-compose.json  docker-compose.yml  judge.py  requirements.txt
phat-judge/: Cargo.toml
phat-judge/src/: judge.rs  main.rs  orderbook.rs  server.rs
site/: _worker.js  app.js
site/pages/: index.html
