[package]
name = "aioption-judge"
version = "0.2.0"
edition = "2021"
description = "AI Option — High-performance order book matching engine in TEE"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (inside TEE)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (ECDSA signing)
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"

# Ethereum interaction
alloy = { version = "0.12", features = ["full"] }

# HTTP client (OpenRouter API, Ethereum RPC)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for order IDs
uuid = { version = "1", features = ["v4"] }

# Decimal for precise price math
rust-decimal = { version = "1", features = ["maths"] }
